# Xscopes-Qt6

./: README.md  installer.nsi
source/: CMakeLists.txt  CMakeLists.txt.user.288a28e  bootloader.cpp  bootloader.h  bootloader.ui  build.h  build_inc.bat  filedownloader.cpp  filedownloader.h  main.cpp  qcustomplot.cpp  resource.h  xprotolabinterface.aps  xprotolabinterface.cpp  xprotolabinterface.h  xprotolabinterface.qrc  xprotolabinterface.rc  xprotolabinterface.ui
